<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:paddingRight="30sp"
    android:paddingLeft="30sp"
    android:paddingTop="30sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginBottom="20sp"
            />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="60sp"
           android:autofillHints="@string/phonenumber"
           android:background="@color/F8F9FA"
           android:inputType="numberDecimal"
           tools:ignore="LabelFor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30sp"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:text="@string/loginbtn"
            android:background="@color/F182247"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/F182247"
            android:text="@string/register"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/car"
            android:importantForAccessibility="no" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>